Ajuste no swagger e libera
